--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
     "deploy": "wrangler deploy --minify src/index.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.577.0",
+    "@aws-sdk/credential-provider-node": "^3.577.0",
+    "@aws-sdk/s3-request-presigner": "^3.577.0",
     "@prisma/client": "^5.14.0",
     "@prisma/extension-accelerate": "^1.0.0",
+    "aws-sdk": "^2.1623.0",
+    "dotenv": "^16.4.5",
     "hono": "^4.3.7"
   },
   "devDependencies": {
