--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@aws-sdk/client-s3": "^3.577.0",
     "@aws-sdk/credential-provider-node": "^3.577.0",
     "@aws-sdk/s3-request-presigner": "^3.577.0",
+    "@kuchbhimingwal/blackbox-zod": "^1.0.3",
     "@prisma/client": "^5.14.0",
     "@prisma/extension-accelerate": "^1.0.0",
     "aws-sdk": "^2.1623.0",
